# sigmaj-accelerated-cpp

./: README.md
0/helloWorld/: CMakeLists.txt  HelloWorld  TutorialConfig.h  TutorialConfig.h.in  hw.cpp
1/HelloFrame/: CMakeLists.txt  helloFrame.cpp
1/HelloName/: CMakeLists.txt  helloName.cpp
1/ex1-4/: whatdo.cpp
1/ex1-5/: CMakeLists.txt  whatdo.cpp
2/e0-4/: CMakeLists.txt  frameName.cpp
2/e5/: CMakeLists.txt  loopPractice.cpp
3/e0/: CMakeLists.txt  exercise.cpp
3/e3/: CMakeLists.txt  strcnt.cpp
4/0/: CMakeLists.txt  grade.cpp  grade.h  grader.cpp  median.cpp  median.h  student_info.cpp  student_info.h
4/6/: CMakeLists.txt  book.txt  grade.cpp  grade.h  grader.cpp  student_info.cpp  student_info.h
6/: CMakeLists.txt  accumulatedoeswhat.cpp
7/0/: CMakeLists.txt  crossReference.cpp  grammar.cpp  grammartest.txt  split.cpp  split.h  testtext  wordCounter.cpp
8/: CMakeLists.txt  functions.h  harness.cpp
